# lo-eyes

./: .gitignore  README.md  lo-eyes  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: ci.yml  publish.yml
lo_eyes/: __init__.py  __main__.py  server.py
