[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lo-eyes"
version = "1.1.0"
description = "Visual frontend accessibility inspector MCP server. WCAG contrast checking, touch target validation, heading hierarchy audits, responsive screenshots."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Like One", email = "hello@likeone.ai" },
]
keywords = [
    "mcp",
    "accessibility",
    "wcag",
    "a11y",
    "visual-testing",
    "model-context-protocol",
    "claude-code",
    "frontend-inspector",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/sophiacave/lo-eyes"
Repository = "https://github.com/sophiacave/lo-eyes"
Issues = "https://github.com/sophiacave/lo-eyes/issues"

[project.scripts]
lo-eyes = "lo_eyes.server:main"
